WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200095
Module-enabled users of WKWebProcessPlugInFrame.h fail to build; duplicate declaration
https://bugs.webkit.org/show_bug.cgi?id=200095
Summary
Module-enabled users of WKWebProcessPlugInFrame.h fail to build; duplicate de...
Tim Horton
Reported
2019-07-24 14:13:40 PDT
Module-enabled users of WKWebProcessPlugInFrame.h fail to build; duplicate declaration
Attachments
Patch
(1.58 KB, patch)
2019-07-24 14:13 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-07-24 14:13:57 PDT
Created
attachment 374806
[details]
Patch
Tim Horton
Comment 2
2019-07-24 14:13:58 PDT
<
rdar://problem/53512407
>
WebKit Commit Bot
Comment 3
2019-07-24 14:44:38 PDT
Comment on
attachment 374806
[details]
Patch Clearing flags on attachment: 374806 Committed
r247791
: <
https://trac.webkit.org/changeset/247791
>
WebKit Commit Bot
Comment 4
2019-07-24 14:44:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug