Module-enabled users of WKWebProcessPlugInFrame.h fail to build; duplicate declaration https://bugs.webkit.org/show_bug.cgi?id=200095 <rdar://problem/53512407>

Reviewed by Wenson Hsieh.

* WebProcess/InjectedBundle/API/Cocoa/WKWebProcessPlugInFrame.h:
Import <JavaScriptCore/JavaScriptCore.h> (the module header) instead of
<JavaScriptCore/JSContext.h> directly, otherwise we can end up getting
JSContext.h included twice, to the compiler's chagrin.


Canonical link: https://commits.webkit.org/213921@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247791 268f45cc-cd09-0410-ab3c-d52691b4dbfc